# wety

./: .gitignore  CNAME  Cargo.toml  LICENSE.md  README.md  asset-manifest.json  index.html  manifest.json  notes.md  pyproject.toml  scratch.ipynb
client/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  search.js  styles.css  tsconfig.json  vite.config.ts
client/public/: index.html
client/src/: App.css  App.tsx  SearchPane.tsx  index.css  index.scss  index.tsx  router.ts  scss.d.ts  signals.ts  state.ts
client/src/components/Layout/: Layout.tsx
client/src/ety/: DescendantsTooltip.tsx  DescendantsTree.tsx  Ety.css  Ety.tsx  EtymologyTooltip.tsx  EtymologyTree.css  EtymologyTree.tsx  Tooltip.css  Tooltip.tsx  Tree.css  Tree.tsx  TreeTooltip.tsx  tooltip.ts  tree.ts  treeCluster.ts
client/src/pages/: Home.tsx
client/src/providers/: app.tsx
client/src/routes/: public.tsx
client/src/search/: Autocomplete.css  Autocomplete.tsx  EtyButton.css  EtyButton.module.scss  EtyButton.tsx  ItemSearch.css  ItemSearch.tsx  LangSearch.tsx  MultiLangSearch.tsx  SearchPane.css  SearchPane.module.scss  SearchPane.tsx  TreeKindSelect.tsx  combobox.scss  responses.ts  types.ts
client/src/settings/: SettingsSidebar.css  SettingsSidebar.module.scss  SettingsSidebar.tsx  etyModes.ts  filterTree.ts
client/src/store/: GlobalClient.tsx  reducers.ts
core/: Cargo.toml
core/data/: languages.json
core/src/: ety_graph.rs  etymology_templates.rs  gloss.rs  items.rs  langterm.rs  languages.rs  lib.rs  pos.rs  pos_phf.rs  processed.rs  string_pool.rs
data/: llm.ipynb  scratch.ipynb
data/descendants/: descendants_langs.py
data/phf/: ety_lang_data.json  etymology_langs.json  etymology_languages_data.lua  etymology_only_languages.csv  fetch_wikidata_lang_data.py  fetch_wiktionary_lang_data.py  lang.py  lang_ancestors.json  lang_ancestors.py  lang_data.json  lang_data_export.py  lang_families.json  lang_families.py  lang_family_data.json  language_data.py  list_of_languages.csv  pos.py  wiktextract_language_families.json  wiktextract_languages.json
data/test/: README.md  bank.json  descendants.json  descendants.jsonl  lime.json  see.json  sekʷ-.json  talisman.json
processor/: Cargo.toml  notes.md
processor/data/: families.json  fetch_wikidata_lang_data.py  glottolog_data.py  language_data.lua  language_data.py  languages.json  pos_data.py
processor/src/: descendants.rs  embeddings.rs  ety_graph.rs  etymology.rs  etymology_templates.rs  gloss.rs  items.rs  lang_phf.rs  langterm.rs  languages.rs  lib.rs  main.rs  pos.rs  pos_phf.rs  processed.rs  processed_data.rs  redirects.rs  root.rs  turtle.rs  wiktextract_json.rs
raw_client/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
raw_client/pages/: _app.js  _app.tsx  index.tsx
raw_client/pages/api/: search.js  search.ts
raw_client/pages/search/: [id].js  [id].tsx
raw_client/src/components/: Home.tsx  SearchBar.js  SearchBar.tsx  Tree.js  Tree.tsx
raw_client/src/styles/: SearchBar.module.css  Tree.module.css  globals.css  site.css
raw_client/src/types/: index.ts
server/: Cargo.toml  deployment.md
server/src/: lib.rs  main.rs
src/: descendants.rs  embeddings.rs  ety_graph.rs  etymology.rs  etymology_templates.rs  gloss.rs  items.rs  lang.rs  lang_term.rs  langterm.rs  lib.rs  main.rs  phf_ext.rs  pos.rs  raw_items.rs  redirects.rs  root.rs  string_pool.rs  turtle.rs  wiktextract_json.rs
static/css/: main.2b5da9b5.css  main.2b5da9b5.css.map  main.2e4d6798.css  main.2e4d6798.css.map  main.7f73c685.css  main.7f73c685.css.map
static/js/: 787.871b8b45.chunk.js  787.871b8b45.chunk.js.map  main.1fcab8a8.js  main.1fcab8a8.js.map  main.203fcb7a.js  main.203fcb7a.js.map  main.2ce4ed4e.js  main.2ce4ed4e.js.map  main.311755a0.js  main.311755a0.js.map  main.65786e9a.js  main.65786e9a.js.map  main.a5b75f25.js  main.a5b75f25.js.map  main.ba0b46d8.js  main.ba0b46d8.js.map
