[package]
name = "wety"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
simd-json = "0.5.0"
snmalloc-rs = {version = "0.3.0", features = ["native-cpu"]}
bytelines = "2.4"
flate2 = "1.0.24"
futures-util = "0.3.21"
reqwest = {version = "0.11.11", features = ["stream"]}
tokio = {version = "1.19.2", features = ["rt", "rt-multi-thread", "macros"]}
indicatif = "0.16.2"
