[package]
name = "wety"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
simd-json = "0.5.0"
snmalloc-rs = {version = "0.3.0", features = ["native-cpu"]}
bytelines = "2.4"
flate2 = "1.0.24"
string-interner = "0.14.0"
phf = {version = "0.10", features = ["macros"]}
hashbrown = "0.12.2"
anyhow = {version = "1.0.58", features = ["backtrace"]}
oxigraph = "0.3.5"
indicatif = "0.17.0"
clap = { version = "3.2.17", features = ["derive"] }
petgraph = "0.6.2"
regex = "1.7.1"
lazy_static = "1.4.0"
