[package]
name = "processor"
version = "0.1.0"
edition = "2024"

[dependencies]
wety-core = { path = "../core" }
simd-json = "0.7.0"
snmalloc-rs = {version = "0.3.0", features = ["native-cpu"]}
bytelines = "2.4"
flate2 = {workspace = true}
anyhow = {workspace = true}
indicatif = "0.17.0"
clap = { version = "3.2.17", features = ["derive"] }
regex = "1.7.1"
itertools = "0.10.5"
serde = {workspace = true}
serde_json = {workspace = true}
sled = "0.34.7"
xxhash-rust = {version="0.8.6", features=["xxh3"]}
phf = {version = "0.10", features = ["macros"]}
csv = "1.2.2"
hf-hub = "0.3.2"
tokenizers = { version = "0.15.0", default-features = false, features = ["onig"] }
candle-core = { version = "0.3.2"}
candle-transformers = { version = "0.3.2"}
candle-nn = { version = "0.3.2"}
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]