[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
processor = { path = "../processor" }
# external
anyhow = {workspace = true}
flate2 = {workspace = true}
serde_json = {workspace = true}
axum = "0.6.12"
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"]}
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["compression-br"]}